plugins {
    id 'application'
}

version = 1.0
sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19
mainClassName = 'org.victorschools.club.math.Main'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
}

application {
    mainClass = project.mainClassName
}

jar {
    manifest {
        attributes 'Main-Class': project.mainClassName
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
